[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/ui/editors/NodeGraphEditor.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ui/editors/NodesAddPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Util/ButtonSFX.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/ui/Ava Log.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/ui/editors/EditorVisibility.gd" type="Script" id=5]
[ext_resource path="res://Scenes/ui/editors/NodeGraphSFX.gd" type="Script" id=6]
[ext_resource path="res://Assets/SFX/ui/graph_saved.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/ui/node_created.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/ui/node_disconnected.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/ui/node_delete.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/ui/node_connected.wav" type="AudioStream" id=11]

[node name="NodeGraphEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
node_popup = ExtResource( 2 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 122

[node name="NodeGraphEditor" type="PanelContainer" parent="HSplitContainer"]
margin_right = 618.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/NodeGraphEditor"]
margin_left = 2.0
margin_top = 2.0
margin_right = 616.0
margin_bottom = 598.0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/NodeGraphEditor/VBoxContainer"]
margin_right = 614.0
margin_bottom = 28.0

[node name="BtnReset" type="Button" parent="HSplitContainer/NodeGraphEditor/VBoxContainer/HBoxContainer"]
margin_right = 72.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Reset"

[node name="ButtonSFX" parent="HSplitContainer/NodeGraphEditor/VBoxContainer/HBoxContainer/BtnReset" instance=ExtResource( 3 )]

[node name="Control" type="Control" parent="HSplitContainer/NodeGraphEditor/VBoxContainer/HBoxContainer"]
margin_left = 76.0
margin_right = 148.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="BtnSave" type="Button" parent="HSplitContainer/NodeGraphEditor/VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 224.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Save"

[node name="ButtonSFX" parent="HSplitContainer/NodeGraphEditor/VBoxContainer/HBoxContainer/BtnSave" instance=ExtResource( 3 )]

[node name="TickEvent" type="Button" parent="HSplitContainer/NodeGraphEditor/VBoxContainer/HBoxContainer"]
margin_left = 228.0
margin_right = 321.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Force Tick"

[node name="ButtonSFX" parent="HSplitContainer/NodeGraphEditor/VBoxContainer/HBoxContainer/TickEvent" instance=ExtResource( 3 )]

[node name="TimeProgress" type="TextureProgress" parent="HSplitContainer/NodeGraphEditor/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 325.0
margin_right = 614.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="GraphEdit" type="GraphEdit" parent="HSplitContainer/NodeGraphEditor/VBoxContainer"]
unique_name_in_owner = true
margin_top = 32.0
margin_right = 614.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
scroll_offset = Vector2( -396, -22 )

[node name="VSplt" type="VSplitContainer" parent="HSplitContainer"]
margin_left = 650.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 1
size_flags_horizontal = 3
split_offset = 92

[node name="EditorVisibility" type="Control" parent="HSplitContainer/VSplt"]
margin_right = 374.0
margin_bottom = 376.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )
target_node = NodePath("../../..")
alpha_hidden = 0.0

[node name="AvaLog" parent="HSplitContainer/VSplt" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 408.0
margin_right = 374.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SFX" type="Node" parent="."]
script = ExtResource( 6 )

[node name="SFX_GraphSaved" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )

[node name="SFX_NodeCreated" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )

[node name="SFX_NodeConnected" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 11 )

[node name="SFX_NodeDeleted" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 10 )

[node name="SFX_NodeDiconnected" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 9 )

[connection signal="graph_saved" from="." to="SFX" method="_on_NodeGraphEditor_graph_saved"]
[connection signal="node_created" from="." to="SFX" method="_on_NodeGraphEditor_node_created"]
[connection signal="node_deleted_internal" from="." to="SFX" method="_on_NodeGraphEditor_node_deleted_internal"]
[connection signal="pressed" from="HSplitContainer/NodeGraphEditor/VBoxContainer/HBoxContainer/BtnReset" to="." method="_on_BtnReset_pressed"]
[connection signal="pressed" from="HSplitContainer/NodeGraphEditor/VBoxContainer/HBoxContainer/BtnSave" to="." method="_on_BtnSave_pressed"]
[connection signal="pressed" from="HSplitContainer/NodeGraphEditor/VBoxContainer/HBoxContainer/TickEvent" to="." method="_on_TickEvent_pressed"]
[connection signal="connection_from_empty" from="HSplitContainer/NodeGraphEditor/VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_connection_from_empty"]
[connection signal="connection_request" from="HSplitContainer/NodeGraphEditor/VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="connection_request" from="HSplitContainer/NodeGraphEditor/VBoxContainer/GraphEdit" to="SFX" method="_on_GraphEdit_connection_request"]
[connection signal="connection_to_empty" from="HSplitContainer/NodeGraphEditor/VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_connection_to_empty"]
[connection signal="delete_nodes_request" from="HSplitContainer/NodeGraphEditor/VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_delete_nodes_request"]
[connection signal="disconnection_request" from="HSplitContainer/NodeGraphEditor/VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="disconnection_request" from="HSplitContainer/NodeGraphEditor/VBoxContainer/GraphEdit" to="SFX" method="_on_GraphEdit_disconnection_request"]
[connection signal="popup_request" from="HSplitContainer/NodeGraphEditor/VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_popup_request"]
[connection signal="mouse_entered" from="HSplitContainer/VSplt/EditorVisibility" to="HSplitContainer/VSplt/EditorVisibility" method="_on_EditorVisibility_mouse_entered"]
[connection signal="mouse_exited" from="HSplitContainer/VSplt/EditorVisibility" to="HSplitContainer/VSplt/EditorVisibility" method="_on_EditorVisibility_mouse_exited"]
